[gd_scene load_steps=10 format=3 uid="uid://d0nr0e1m21mee"]

[ext_resource type="Theme" uid="uid://s5xv0gvoejyb" path="res://Main Menu/main_menu_theme.tres" id="1_bo01l"]
[ext_resource type="Script" path="res://Main Menu/main_menu.gd" id="1_ml6fj"]
[ext_resource type="FontFile" uid="uid://bnvllro27eua7" path="res://assets/UI/fonts/Signwood-Regular.ttf" id="3_gk5j7"]
[ext_resource type="Texture2D" uid="uid://7iac3pymuiwi" path="res://Main Menu/WhatsApp Image 2024-09-24 at 22.18.03_17e0f5a1.jpg" id="3_nipe5"]
[ext_resource type="Texture2D" uid="uid://cb6cfhge0osyj" path="res://Main Menu/GUI.png" id="4_0kynr"]
[ext_resource type="Texture2D" uid="uid://dddh0acbrhgqj" path="res://icons/PROJECT BHUJAL LOGO TRANSPARENT.png" id="5_fy4yk"]
[ext_resource type="Texture2D" uid="uid://buoknkyxxet1c" path="res://icons/Team AVYAY logo new.png" id="7_7m2ln"]
[ext_resource type="Texture2D" uid="uid://c7jnj536jju5s" path="res://icons/SIH_logo_2024_horizontal_new.png" id="8_186j8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lfarf"]
atlas = ExtResource("4_0kynr")
region = Rect2(2, 34, 44, 44)

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bo01l")
script = ExtResource("1_ml6fj")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nipe5")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.381944
anchor_top = 0.271605
anchor_right = 1.38194
anchor_bottom = 1.2716
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.234793, 0.459774)
texture = SubResource("AtlasTexture_lfarf")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="project_bhujal" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_fy4yk")
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 33
alignment = 1

[node name="start_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme = ExtResource("1_bo01l")
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("3_gk5j7")
theme_override_font_sizes/font_size = 35
text = "Start Game
"

[node name="leaderboard_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme = ExtResource("1_bo01l")
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("3_gk5j7")
theme_override_font_sizes/font_size = 35
text = "LeaderBoard
"

[node name="exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("3_gk5j7")
theme_override_font_sizes/font_size = 35
text = "Exit Game"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 611.0
offset_bottom = 611.0
scale = Vector2(0.280001, 0.280001)

[node name="team_avyay" type="TextureRect" parent="AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("7_7m2ln")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -279.0
offset_top = 3.0
offset_right = 6646.0
offset_bottom = 3545.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.04, 0.04)

[node name="SIH" type="TextureRect" parent="AspectRatioContainer2"]
layout_mode = 2
texture = ExtResource("8_186j8")
stretch_mode = 5
